Create screen reader page and fixed bugs according to bug re[port

--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -1686,6 +1686,8 @@ table thead th {
 
 .wrapper #masterGallerySlider .img-wrap img {
   border-radius: 0;
+  height: 180px;
+  object-fit: cover;
 }
 
 .wrapper #masterGallerySlider .title {
