--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2404,3 +2404,13 @@ marquee.marquee {
   height: 260px;
   object-fit: cover;
 }
+
+.border-left-1 {
+  border-left: 1px solid rgba(33, 37, 41, 0.5);
+  padding-left: 10px;
+  margin-left: 10px !important;
+}
+.timer-date-c span.li_eng.responsive_go_eng {
+  display: flex;
+  align-items: center;
+}
