update organization page and other bug

--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -78,9 +78,9 @@ ul {
     position: absolute;
     right: 0;
   }
-  @media (max-width: 1440px) {
-    font-size: 1.25em;
-  }
+  // @media (max-width: 1440px) {
+  //   font-size: 1.25em;
+  // }
 }
 
 .heading-black {
