--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -133,11 +133,11 @@ ul {
   right: 0;
 }
 
-@media (max-width: 1440px) {
+/* @media (max-width: 1440px) {
   .heading-red {
     font-size: 1.25em;
   }
-}
+} */
 
 .heading-black {
   font-size: 2.25em;
