Update clientail logo

--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2440,4 +2440,7 @@ marquee.marquee {
   .header-top-left .content .title {
     font-size: 0.7em !important;
   }
+  .client-slider-content img {
+    height: 130px;
+  }
 }
