--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -765,7 +765,7 @@ table thead th {
   font-weight: normal;
   color: #fec941;
   text-decoration: none;
-  margin-right: 30px;
+  margin-right: 15px;
 }
 
 .hero-wrap {
@@ -2998,9 +2998,132 @@ marquee.marquee {
 a{text-decoration: none !important;}
 .sitemap-header-list{padding: 0px;}
 
-
-
-
 img {
   max-width: 100%;
+}
+.pagination {
+  margin: 20px 0
+}
+
+.pagination .disabled a,
+.pagination .disabled a:hover,
+.pagination .disabled a:focus,
+.pagination .disabled a:active {
+  color: #bbb
+}
+
+.pagination li.active {
+  background-color: transparent !important
+}
+
+.pagination li.active a {
+  background-color: #ffc107;
+  border-color: #ffc107;
+  color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2)
+}
+
+.pagination li {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0
+}
+
+.pagination>li>a {
+  border: 0;
+  font-weight: bold;
+  color: #555;
+  font-size: 14px;
+  margin: 0 3px;
+  color: gray;
+  margin: 5px;
+  border-radius: 50%;
+  color: gray;
+  min-width: 30px;
+  text-transform: uppercase;
+  padding: .5rem .75rem;
+  line-height: 1.25
+}
+
+.pagination>li>a:hover {
+  font-weight: bold;
+  background-color: transparent;
+  color: #8c8b8b;
+  border-radius: 50%;
+  font-size: 14px
+}
+
+.pagination>li:first-child>a,
+.pagination>li:last-child>a {
+  width: auto;
+  height: 32px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0
+}
+
+.pagination>li:first-child>a .material-icons,
+.pagination>li:last-child>a .material-icons {
+  position: relative;
+  bottom: 0
+}
+
+.pagination-sm>li:first-child>a,
+.pagination-sm>li:last-child>a {
+  width: 28px;
+  height: 28px
+}
+
+.pagination-sm>li:first-child>a .material-icons,
+.pagination-sm>li:last-child>a .material-icons {
+  position: relative;
+  top: 4px;
+  left: -6px;
+  font-size: 20px
+}
+
+.pagination-sm>li>a,
+.pagination-sm>li>span {
+  padding: 5px 10px;
+  font-size: 12px
+}
+
+.pagination-lg>li:first-child>a,
+.pagination-lg>li:last-child>a {
+  width: 44px;
+  height: 44px
+}
+
+.pagination-lg>li:first-child>a .material-icons,
+.pagination-lg>li:last-child>a .material-icons {
+  font-size: 30px;
+  position: relative;
+  top: 0;
+  left: -10px
+}
+
+.pagination-lg>li>a,
+.pagination-lg>li>span {
+  padding: 10px 16px;
+  font-size: 18px
+}
+
+
+.search-page nav[role=navigation] svg{width:25px;height:25px}
+.search-page nav[role=navigation] div:nth-child(1){visibility:hidden}
+.search-page nav[role=navigation] div:nth-child(2){display:flex;justify-content:space-between}
+.search-page nav[role=navigation] div:nth-child(2) div{display:inline-block;margin:0;visibility:visible}
+.search-page nav[role=navigation] div:nth-child(2) div p{background:#fff;font-weight:600;font-size:15px;padding:5px 20px;margin:0}
+.search-page nav[role=navigation] div:nth-child(2) div span[aria-current=page] span{font-size:14px;font-weight:600;padding:4px 8px!important;margin:0 2px;background:#1a4f91!important;color:#fff!important}
+.search-page nav[role=navigation] div:nth-child(2) div span .text-sm,.search-page nav[role=navigation] div:nth-child(2) div span a{font-size:14px;font-weight:600;padding:4px 8px!important;margin:0 2px}
+.search-box input{border-radius:5px 0 0 5px}
+.search-box button{border-radius:0 5px 5px 0;padding:10px 21px!important;font-size:14px}
+
+
+marquee.marquee ul li:not(:last-child) {
+  border-right: 1px solid #fec941;
+  margin-right: 15px;
 }
