Update Dark mode

--- a/assets-nsg/css/dark.scss
+++ b/assets-nsg/css/dark.scss
@@ -65,8 +65,8 @@
     }
 }
 
-.eliminator-wrap {
-    background-color: #000;
+.eliminator-wrap, .hero-wrap   {
+    background: #000 !important;
 }
 
 .client-slider-content {
