--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -1122,7 +1122,7 @@ table thead th {
   width: 100%;
 }
 
-.gallery-wrap .card-red {
+.gallery-wrap .card-red, .card-wrap.card-black.card-red-same {
   border: 1px solid #fec941;
   background: #611e29;
 }
