--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -2500,6 +2500,7 @@ table thead th {
   font-weight: 600;
   color: #000000;
   margin: 0;
+  text-align: left;
 }
 
 .veer-accordion .veer-img {
@@ -2592,6 +2593,7 @@ table thead th {
 
 .veer-accordion .accordion-body .brief-wrap .title span {
   font-weight: normal;
+  text-transform: capitalize;
 }
 
 .veer-accordion .accordion-body .brief-wrap .desc {
