--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -3206,7 +3206,9 @@ div#gallerySlider .owl-item .item img {
     object-fit: cover;
 }
 }
-
+img.copyprevention-processed {
+  width: 100%;
+}
 
 #nsg_datatableForm tbody tr td:last-child, #nsg_datatableForm thead tr th:last-child{
   display: none !important;
