--- a/assets-nsg/css/dark.css
+++ b/assets-nsg/css/dark.css
@@ -154,4 +154,14 @@ g#Icon_feather-arrow-right path#Path_108123, g#Icon_feather-arrow-right path#Pat
   background-color: #fff !important;
   color: #000 !important;
 }
+
+.contact-wrap button.dt-paging-button.current, div.dt-container .dt-paging .dt-paging-button.current {
+  background: #000 !important;
+  color: #fff !important;
+}
+
+div.dt-container .dt-paging .dt-paging-button {
+  background: #000 !important;
+  color: #fff !important;
+}
 /*# sourceMappingURL=dark.css.map */
