Fixed benner width issues

--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -799,9 +799,11 @@ table thead th {
   border: 1px solid #707070;
   padding: 20px;
   text-align: center;
-  margin: 4rem 0;
+  margin: 1.1rem 0 0;
   width: 100%;
 }
+
+
 
 @media (max-width: 1440px) {
   .hero-wrap .director-wrap {
@@ -1272,6 +1274,22 @@ table thead th {
   display: block;
 }
 
+.hero-wrap .banner-slider .owl-item img {
+  height: 720px;
+}
+@media (max-width: 1599px) {
+  .hero-wrap .banner-slider .owl-item img {
+    height: 590px;
+  }
+  .hero-wrap .director-wrap{margin: 0rem 0 0;}
+}
+@media (max-width: 1350px) {
+  .hero-wrap .banner-slider .owl-item img {
+    height: 490px;
+  }
+  .hero-wrap .director-wrap{margin: 0rem 0 0;}
+}
+
 @media (min-width: 992px) {
 
   .gallery-slider .carousel-control-prev,
@@ -1299,6 +1317,12 @@ table thead th {
   .gallery-slider {
     margin-bottom: 1rem;
   }
+  .hero-wrap .director-wrap {
+    margin: 2rem 0;
+}
+.hero-wrap .banner-slider .owl-item img {
+  height: auto;
+}
 }
 
 .award-wrap {
@@ -1312,6 +1336,7 @@ table thead th {
   .award-wrap {
     margin-bottom: 1rem;
   }
+  .m-ps-0{padding-left: 0px;}
 }
 
 .award-wrap .nav-tabs {
